--- a/registration-certificate.html
+++ b/registration-certificate.html
@@ -62,7 +62,7 @@
                             <div class="subject number">
                                 <p class="title">No.</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.enrollmentNumber}}</p>
+                                <p class="result">{{credentialSubject.registrationNumber}}</p>
                             </div>
                             <div class="subject name">
                                 <p class="title">Name</p>
@@ -72,12 +72,12 @@
                             <div class="subject motherName">
                                 <p class="title">Mother's Name</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.mother}}</p>
+                                <p class="result">{{credentialSubject.mothersName}}</p>
                             </div>
                             <div class="subject fatherName">
                                 <p class="title">Father's Name</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.father}}</p>
+                                <p class="result">{{credentialSubject.fathersName}}</p>
                             </div>
                             <div class="subject address">
                                 <p class="title">Address</p>
@@ -87,12 +87,12 @@
                             <div class="subject center">
                                 <p class="title">Training Center</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainningCenter}</p>
+                                <p class="result">{{credentialSubject.trainingCenter}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Year of Passing</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.resultDate}}</p>
+                                <p class="result">{{credentialSubject.passingYear}}</p>
                             </div>
                             <div class="s-division">
                                 <div class="row">
@@ -121,7 +121,7 @@
                         
                         <div class="f-division">
                             <div class="profile-scan">
-                                <div class="studentID"><img src="{{credentialSubject.orgLogo}}" alt="student ID Photo"></div>
+                                <div class="studentID"><img src="{{credentialSubject.candiadteLogo}}" alt="student ID Photo"></div>
     
                             </div>
                             <div class="org-section text-center primary-color">
