--- a/Foreign-certificate.html
+++ b/Foreign-certificate.html
@@ -122,7 +122,7 @@
                         </div>
                         <div class="dateandno">
                             <div class="daterow">
-                                <h4>No: 4667</h4>
+                                <h4>No: {{credentialSubject.refNo}}</h4>
                                 <h4>Dated :{{credentialSubject.dated}}</h4>
                             </div>
                         </div>
