--- a/registration-certificate.html
+++ b/registration-certificate.html
@@ -57,7 +57,7 @@
                     	 <h4 class="act">Empowered Under INDIAN MEDICAL DEGREE ACT 1916</h4>
 	    		        <h6 class="act-det">(Government of India Notification Department of Education,Health and Lands No.1964, dated 16<sup>th</sup> December 1926 with effect from 15<sup>th</sup>November 1929)</h6>
                         <h4 class="cer-name">ENROLLMENT / REGISTRATION CERTIFICATE</h4>
-                        <h4 class="cer-type">{{credentialSubject.trainingTitle}}</h4>
+                        <h4 class="cer-type">{{credentialSubject.courseName}}</h4>
                         <div class="en-details">
                             <div class="subject number">
                                 <p class="title">No.</p>
