--- a/BABY-D.html
+++ b/BABY-D.html
@@ -61,12 +61,12 @@
                     	 <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/diploma_SMF.jpg" alt="upsmf logo images"></div>
                     	 <h4 class="act">Empowered Under INDIAN MEDICAL DEGREE ACT 1916</h4>
 	    		        <h6 class="act-det">(Government of India Notification Department of Education,Health and Lands No.1964, dated 16<sup>th</sup> December 1926 with effect from 15<sup>th</sup>November 1929)</h6>
-                        <h4 class="cer-type">{{credentialSubject.trainingTitle}}</h4>
+                        <h4 class="cer-type">{{credentialSubject.courseName}}</h4>
                         <div class="en-details">
                             <div class="annot">
                                 <p >This is to certify that <font style='font-weight: 1000;'><u>{{credentialSubject.name}}</u></font>
                                     D/O <font style='font-weight: 1000;'><u>{{credentialSubject.mothersName}} & {{credentialSubject.fathersName}}</font style></u> has passed the examination of
-                                    <font style="font-weight: 1000;">{{credentialSubject.trainingTitle}}</font> held in the month of <font <font style='font-weight: 1000;''><u>{{credentialSubject.resultDate}}</font></u> from the training centre <font <font style='font-weight: 1000;'><u>{{credentialSubject.trainingCenter}}]</font style></u> conducted by the<font <font style='font-weight: 1000;'> U.P. State Medical Faculty.</font style>
+                                    <font style="font-weight: 1000;">{{credentialSubject.courseName}}</font> held in the month of <font <font style='font-weight: 1000;''><u>{{credentialSubject.resultDate}}</font></u> from the training centre <font <font style='font-weight: 1000;'><u>{{credentialSubject.trainingCenter}}]</font style></u> conducted by the<font <font style='font-weight: 1000;'> U.P. State Medical Faculty.</font style>
                                 </p>
                             </div>
                             <p > Signed on behalf of the Governing Body of the U.P. State Medical Faculty</p>
