--- a/BABY-D.html
+++ b/BABY-D.html
@@ -48,7 +48,7 @@
                 <header>
 					<div class="s-division">
 						<div class="row">
-								<p class="title1">{{credentialSubject.trainingCenterCode}}</p>
+								<p class="title1">{{credentialSubject.centerCode}}</p>
 						</div>
 						<div class="row">
 							<p class="title2">{{credentialSubject.rollNumber}}</p>
