--- a/MSC-r.html
+++ b/MSC-r.html
@@ -52,10 +52,10 @@
                 </header>
                     <div class="mainSection">
                     	 <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/diploma_SMF.jpg" alt="upsmf logo images"></div>
-                        <h4 class="cer-type">{{credentialSubject.trainingTitle}}</h4>
+                        <h4 class="cer-type">{{credentialSubject.courseName}}</h4>
                         <div class="s-division">
                             <div class="row">
-                                    <p class="title1">{{credentialSubject.trainingCenterCode}}</p>
+                                    <p class="title1">{{credentialSubject.centerCode}}</p>
                             </div>
                             <div class="row">
                                 <p class="title2">{{credentialSubject.rollNumber}}</p>
