--- a/MSC-r.html
+++ b/MSC-r.html
@@ -36,13 +36,14 @@
                 .s-division .row img{width: 73px;height: 73px;}
                 .subject1{display:flex;margin-bottom:2px}.subject1 p{margin:0 0 5px;}.subject1 .title{width:12rem;color: #2020a7;}.subject1 
                 .sep{width:1rem}.subject1 .result{font-family:Calibri;font-weight:500;flex:0 0 62%}.s-division .row .title1{display: flex;justify-content: start;font-weight: bold;}.title2{display: flex;justify-content: end;font-weight: bold;}.profile-scan .studentID img{width:150px;height:170px;border:2px solid #000;overflow:hidden;padding:6px;display:flex;align-items:center;justify-content:center}
-                .s-division .profile-scan {text-align: center;} .org-section .sign{margin-bottom: 88px;}.texts{    margin-left: 5%;}.texts2{color: #ec1f07}.texts3{color:#2020a7}
+                .s-division .profile-scan {text-align: center;} .org-section .sign{margin-bottom: 88px;}.texts{    margin-left: 5%;}.texts2{color: #ec1f07}.texts3{color:#2020a7}.watermark{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);WIDTH:50%;z-index:0}
     </style>
 </head>
 <body>
     <div class="reg-certificate">
         
         <div class="en-certificate">
+                <div class="watermark"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/watermark.png" alt="web copy certificate"></div>
             <div class="bg-upsmf"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/bg-upmf.png" alt="upsmf watermark images"></div>
             <div class="cc-container">
                 <header>
