--- a/GoodStanding.html
+++ b/GoodStanding.html
@@ -39,13 +39,14 @@
                 .sep{width:1rem}.subject1 .result{font-family:Calibri;font-weight:500;flex:0 0 62%}.s-division .row .title1{display: flex;justify-content: start;}.title2{display: flex;justify-content: end;}
                 .subject .data{width:fit-content}.en-details .tobody{margin-left: 1rem;}.c-block{text-align: justify;text-indent: 71px;margin-top: auto;font-size: 16px;}.details1{align-items: end;display: flex;justify-content: end;}
                 .s2{margin-top:88px;font-weight: bold;}.s3{font-weight: bold;}.dateandno{display: flex;flex-direction: column;align-items: end;margin-top: 4rem;}.daterow{display: flex;flex-direction: row;justify-content: space-between;font-weight: bold;}
-                .todetails{margin-top: 3px;}.para{margin-top: 12px;}p{margin-top: 1px;margin-bottom: 1px;}
+                .todetails{margin-top: 3px;}.para{margin-top: 12px;}p{margin-top: 1px;margin-bottom: 1px;}.watermark{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);WIDTH:50%;z-index:0}
     </style>
 </head>
 <body>
     <div class="reg-certificate">
         
         <div class="en-certificate">
+            <div class="watermark"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/goodstanding.png" alt="web copy certificate"></div>        
             <div class="bg-upsmf"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/bg-upmf.png" alt="upsmf watermark images"></div>
             <div class="cc-container">
                 <header>
