--- a/Foreign-certificate.html
+++ b/Foreign-certificate.html
@@ -91,7 +91,7 @@
                             <div class="subject ">
                                 <p class="title">Training period</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainingPeriod}}</p>
+                                <p class="result">{{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}} To {{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}}</p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Training center</p>
