--- a/registration-certificate-nursing.html
+++ b/registration-certificate-nursing.html
@@ -93,7 +93,7 @@
                             <div class="subject passyear">
                                 <p class="title">Training Period</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainingPeriod}}</p>
+                                <p class="result">{{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}} To {{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Examining Body</p>
