--- a/Foreign-certificate.html
+++ b/Foreign-certificate.html
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <div class="para2">
-                            <p>Copy forwarded<u><b> {{credentialSubject.name}} D/o {{credentialSubject.mothersName}}, {{credentialSubject.presentAddress}},</b></u> has for information.</p>
+                            <p>Copy forwarded<u><b> {{credentialSubject.name}} D/o {{credentialSubject.mothersName}}, {{credentialSubject.address}},</b></u> has for information.</p>
                         </div>
                         <div class="f-division">
                            
