--- a/BABY-D.html
+++ b/BABY-D.html
@@ -64,8 +64,8 @@
                         <h4 class="cer-type">{{credentialSubject.courseName}}</h4>
                         <div class="en-details">
                             <div class="annot">
-                                <p >This is to certify that <font style='font-weight: 1000;'><u>{{credentialSubject.name}}</u></font>
-                                    D/O <font style='font-weight: 1000;'><u>{{credentialSubject.mothersName}} & {{credentialSubject.fathersName}}</font style></u> has passed the examination of
+                                <p >This is to certify that <font style='font-weight: 1000;'><u>{{propertyData.name}}</u></font>
+                                    D/O <font style='font-weight: 1000;'><u>{{propertyData.mothersName}} & {{propertyData.fathersName}}</font style></u> has passed the examination of
                                     <font style="font-weight: 1000;">{{credentialSubject.courseName}}</font> held in the month of <font <font style='font-weight: 1000;''><u>{{credentialSubject.resultDate}}</font></u> from the training centre <font <font style='font-weight: 1000;'><u>{{credentialSubject.trainingCenter}}]</font style></u> conducted by the<font <font style='font-weight: 1000;'> U.P. State Medical Faculty.</font style>
                                 </p>
                             </div>
