--- a/BABY-D.html
+++ b/BABY-D.html
@@ -65,8 +65,8 @@
                         <div class="en-details">
                             <div class="annot">
                                 <p >This is to certify that <font style='font-weight: 1000;'><u>{{credentialSubject.name}}</u></font>
-                                    D/O <font style='font-weight: 1000;'><u>{credentialSubject.mothersName} & {credentialSubject.fathersName}</font style></u> has passed the examination of
-                                    <font style="font-weight: 1000;">{credentialSubject.courseName}</font> held in the month of <font <font style='font-weight: 1000;''><u>{credentialSubject.resultDate}</font></u> from the training centre <font <font style='font-weight: 1000;'><u>{{credentialSubject.trainingCenter}}</font style></u> conducted by the<font <font style='font-weight: 1000;'> U.P. State Medical Faculty.</font style>
+                                    D/O <u>{{credentialSubject.mothersName}} & {{credentialSubject.fathersName}}</u> has passed the examination of
+                                    {credentialSubject.courseName} held in the month of <u>{credentialSubject.resultDate} from the training centre <u>{{credentialSubject.trainingCenter}}</u> conducted by the<font <font style='font-weight: 1000;'> U.P. State Medical Faculty.</font style>
                                 </p>
                             </div>
                             <p > Signed on behalf of the Governing Body of the U.P. State Medical Faculty</p>
