--- a/registration_certificate_WC.html
+++ b/registration_certificate_WC.html
@@ -45,7 +45,7 @@
         
         <div class="en-certificate">
         <div class="watermark"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/watermark.png" alt="web copy certificate"></div>
-            <div class="bg-upsmf"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/bg-upmf.png" alt="upsmf watermark images" alt="upsmf watermark images"></div>
+            <div class="bg-upsmf"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/bg-upmf.png" alt="upsmf watermark images"></div>
             <div class="cc-container">
                 <header>
                    
@@ -88,7 +88,7 @@
                             <div class="subject center">
                                 <p class="title">Training Center</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainingCenter}</p>
+                                <p class="result">{{credentialSubject.trainingCenter}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Year of Passing</p>
