--- a/Foreign-certificate.html
+++ b/Foreign-certificate.html
@@ -106,7 +106,7 @@
                             <div class="subject ">
                                 <p class="title">Date of Birth</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.dob}}</p>
+                                <p class="result">{{credentialSubject.dateOfBirth}}</p>
                             </div>
                         </div>
                         <div class="para">
