--- a/registration-certificate-nursing.html
+++ b/registration-certificate-nursing.html
@@ -109,7 +109,7 @@
                             <div class="subject pass year">
                                 <p class="title"> Date of Birth</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.dob}}</p>
+                                <p class="result">{{credentialSubject.dateOfBirth}}</p>
                             </div>                                                      
                             <div class="s-division">
                                 <div class="row">
