--- a/MSC-r.html
+++ b/MSC-r.html
@@ -59,7 +59,7 @@
                                     <p class="title1">{{credentialSubject.centerCode}}</p>
                             </div>
                             <div class="row">
-                                <p class="title2">{{credentialSubject.rollNumber}}</p>
+                                <p class="title2">{{credentialSubject.finalYearRollNo}}</p>
                             </div>
                         </div>
                         <div class="en-details">
