--- a/MSC-r-WC.html
+++ b/MSC-r-WC.html
@@ -90,7 +90,7 @@ She has obtained the following Additional Qualification:</span>
                             </div>                            
                             </div>
                             <h6 class="texts2" > U.P. Nurses & Midwives Council has the right to cancel the certificate, if any information is found to be incorrect or fake.
-As per present rules, this certificate is having lifetime validity.</6>
+As per present rules, this certificate is having lifetime validity.</h6>
                         </div>
                     </div>
                     
