--- a/GoodStanding-WC.html
+++ b/GoodStanding-WC.html
@@ -83,7 +83,7 @@
                         <div class="subject name">
                             <p class="sep">4.</p>
                             <p class="title">Mobile Number</p>
-                            <p class="result">{{credentialSubject.mobile}}</p>
+                            <p class="result">{{credentialSubject.phoneNumber}}</p>
                         </div>
                         <div class="subject motherName">
                             <p class="sep">5.</p>
