Update MBBS Permanent Registration FORGIN (OTHER COUNCIL REGISTERD ).html

--- a/MBBS Permanent Registration FORGIN (OTHER COUNCIL REGISTERD ).html
+++ b/MBBS Permanent Registration FORGIN (OTHER COUNCIL REGISTERD ).html
@@ -52,6 +52,7 @@
             <div class="bg-upsmf"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/mclogoc.jpg" alt="upsmf watermark images"></div>
             <div class="cc-container">
                 <header>
+			<p class="reg-no"><font style="color:blue">{{credentialSubject.state}}</font> - DMC/R/27231</p>
                    
                     <h3>MEDICAL REGISTRATION CERTIFICATE</h3>
                     <h4>OFFICE OF THE MEDICAL COUNCIL, UTTAR PRADESH</h4>
