--- a/MBBS provisional.html
+++ b/MBBS provisional.html
@@ -114,7 +114,7 @@
                             <div class="subject passyear">
                                 <p class="title">College</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainingCenter}}</p>
+                                <p class="result">{{credentialSubject.College}}</p>
                             </div>
                             <div class="subject center">
                                 <p class="title">Year of Passing</p>
