--- a/NPCC-r.html
+++ b/NPCC-r.html
@@ -59,7 +59,7 @@
                                     <p class="title1">{{credentialSubject.centerCode}}</p>
                             </div>
                             <div class="row">
-                                <p class="title2">{{credentialSubject.rollNumber}}</p>
+                                <p class="title2">{{credentialSubject.finalYearRollNo}}</p>
                             </div>
                         </div>
                         <div class="en-details">
@@ -81,7 +81,7 @@ She has obtained the following Additional Qualification:</span>
                             <div class="subject name">
                                 <p class="title">University</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.collegeAddress}}</p>
+                                <p class="result">{{credentialSubject.university}}</p>
                             </div>
                             <div class="subject name">
                                 <p class="title">Period</p>
