Update MBBS permanent foreign.html

--- a/MBBS permanent foreign.html
+++ b/MBBS permanent foreign.html
@@ -127,7 +127,7 @@
                             </div>
                             <div >
                                 <p><font style="color:blue">Schedule of the Indian Medical Council Act, 1956</font><b>{{credentialSubject.schedule}}</b></p>
-                                <p><font style="color:blue">Undergone rotatory training from</font> {{credentialSubject.trainingFrom}} <font style="color:blue">to</font> {{credentialSubject.trainingUpto}} <font style="color:blue">at</font> {{credentialSubject.trainingCenter}}</p>
+                                <p><font style="color:blue">Undergone rotatory training from</font> {{credentialSubject.trainingFrom}} <font style="color:blue">to</font> {{credentialSubject.trainingUpto}} <font style="color:blue">at</font> {{credentialSubject.College}}</p>
                             </div>
                             
                             
