--- a/MBBS permanent.html
+++ b/MBBS permanent.html
@@ -113,7 +113,7 @@
                             <div class="subject passyear">
                                 <p class="title">College</p>
                                 <p class="sep">:</p>
-                                <p class="result"> {{credentialSubject.collegeAddress}}</p>
+                                <p class="result"> {{credentialSubject.College}}</p>
                             </div>
                             <div class="subject center">
                                 <p class="title">Year of Passing</p>
@@ -127,7 +127,7 @@
                             </div>
                             <div >
                                 <p><font style="color:blue">Schedule of the Indian Medical Council Act, 1956</font><b>{{credentialSubject.schedule}}</b></p>
-                                <p><font style="color:blue">Undergone rotatory training from</font> {{credentialSubject.trainingFrom}} <font style="color:blue">to</font> {{credentialSubject.trainingTo}} <font style="color:blue">at</font>{{credentialSubject.hospitalName}}</p>
+                                <p><font style="color:blue">Undergone rotatory training from</font> {{credentialSubject.trainingFrom}} <font style="color:blue">to</font> {{credentialSubject.trainingTo}} <font style="color:blue">at</font>{{credentialSubject.College}}</p>
                             </div>
                             
                             
