--- a/CORRECTION(provision).html
+++ b/CORRECTION(provision).html
@@ -114,7 +114,7 @@
                             <div class="subject passyear">
                                 <p class="title">College</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainingCenter}}</p>
+                                <p class="result">{{credentialSubject.College}}</p>
                             </div>
                             <div class="subject center">
                                 <p class="title">Year of Passing</p>
@@ -127,7 +127,7 @@
                                 <p class="result">{{credentialSubject.dated}}, Lucknow(U.P)</p>
                             </div>
                             <div >
-                                <p><font style="color:blue">Valid for one year compulsory rotating at the</font> {{credentialSubject.trainingCenter}} <font style="color:blue">only and no other purpose.</font></p>
+                                <p><font style="color:blue">Valid for one year compulsory rotating at the</font> {{credentialSubject.College}} <font style="color:blue">only and no other purpose.</font></p>
                             </div>
                             
                             
