--- a/REISSUE-BDS.html
+++ b/REISSUE-BDS.html
@@ -114,7 +114,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Date & Place of registration</p>
-                                <p class="result">{{credentialSubject.dated}} & {{credentialSubject.place}}</p>
+                                <p class="result">{{credentialSubject.dated}} & Lucknow</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Address</p>
