--- a/MSC-r.html
+++ b/MSC-r.html
@@ -81,7 +81,7 @@ She has obtained the following Additional Qualification:</span>
                             <div class="subject name">
                                 <p class="title">University</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.collegeAddress}}</p>
+                                <p class="result">{{credentialSubject.university}}</p>
                             </div>
                             <div class="subject name">
                                 <p class="title">Period</p>
