--- a/BDS_REG_NO.html
+++ b/BDS_REG_NO.html
@@ -50,7 +50,7 @@
                 <header>
                                       					<div class="s-division">
                         <div class="row">
-                                <p class="title1">{{credentialSubject.state}} - 2018105004</p>
+                                <p class="title1">{{credentialSubject.state}} - {credentialSubject.registrationNumber}}{credentialSubject.registrationPart}}</p>
                         </div>
                     </div>
                     <h3>UTTAR PRADESH DENTAL COUNCIL</h3>
