--- a/MDS-REG.html
+++ b/MDS-REG.html
@@ -72,7 +72,7 @@
                                     <p><font style='color:#2020a7'>He/She studied from </font>{{credentialSubject.university}}<font style='color:#2020a7'> and has obtained following additional qualification from </font>{{credentialSubject.College}}</p>
                             </div>
                             <div class="j-division">
-                                <p ><font style='color:#2020a7'>1 - </font> M.D.S.(MASTER OF DENTAL SURGERY IN PROSTHODONTICS INCLUDING CROWN AND BRIDGE) - 2020</p>
+                                <p ><font style='color:#2020a7'>1 - </font> {{credentialSubject.courseName}}</p>
                                 <p ><font style='color:#2020a7'>2 - </font></p>
                                 <p ><font style='color:#2020a7'>3 -</font></p>
                             </div>
