--- a/ADDITIONAL(UP).html
+++ b/ADDITIONAL(UP).html
@@ -77,7 +77,7 @@
                                         <br><font style='color:#2020a7'>He has obtained the following Additional Qualification:</font></p>
                             </div>
                             <div class="j-division">
-                                <p >-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DIPLOMA IN ORTHOPAEDICS - 2020</p>
+                                <p >-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{credentialSubject.courseName}}</p>
                                 <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEDICAL COLLEGE :</font>{{credentialSubject.trainingCenter}}</p>
                                 <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UNIVERSITY :</font>{{credentialSubject.university}}</p>
                             </div>
