--- a/Additional Registration.html
+++ b/Additional Registration.html
@@ -73,7 +73,7 @@
                                         <br><font style='color:#2020a7'>He has obtained the following Additional Qualification:</font></p>
                             </div>
                             <div class="j-division">
-                                <p >-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;M.D.(MEDICINE) - 1994</p>
+                                <p >-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{credentialSubject.courseName}}</p>
                                 <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEDICAL COLLEGE :</font>{{credentialSubject.trainingCenter}}</p>
                                 <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UNIVERSITY :</font>{{credentialSubject.university}}</p>
                             </div>
