--- a/MSC-r.html
+++ b/MSC-r.html
@@ -72,7 +72,7 @@ She has obtained the following Additional Qualification:</span>
                             </div>
                             
                              <div class="en-details">
-                             <h4 class="texts">- POST BASIC B.S.C NURSING</h4>
+                             <h4 class="texts">- {{credentialSubject.courseName}}</h4>
                             <div class="subject number">
                                 <p class="title">Training Center.</p>
                                 <p class="sep">:</p>
