--- a/registration-certificate-nursing.html
+++ b/registration-certificate-nursing.html
@@ -62,7 +62,7 @@
                             <div class="subject number">
                                 <p class="title">Registration No.</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.registrationNumber}}</p>
+                                <p class="result">{{credentialSubject.regNumber}}</p>
                             </div>
                             <div class="subject name">
                                 <p class="title">Name</p>
