--- a/goodstanding.html
+++ b/goodstanding.html
@@ -74,7 +74,7 @@
                            <span><font style='color:#2020a7'>BDS DEGREE HAE BEEN AWARDED BY</font></span><br>
                            <span>{{credentialSubject.university}} <font style='color:#2020a7'>{{credentialSubject.university}} </font>Dr. PARUL SINGH HAS BEEN REGISTERED IN THIS COUNCIL.</span><br>
                            <span><font style='color:#2020a7'>UNDER DENTIST ACT 1948.(UNDER SECTION 32(2)/35(4)).</font></span><br>
-                           <span><font style='color:#2020a7'>AND BEARING REGISTRATION NO.</font>{{credentialSubject.registrationNumber}}<font style='color:#2020a7'> DATED</font> {{credentialSubject.dated}}</span><br>
+                           <span><font style='color:#2020a7'>AND BEARING REGISTRATION NO.</font>{{credentialSubject.regNumber}}<font style='color:#2020a7'> DATED</font> {{credentialSubject.dated}}</span><br>
                            <span>THIS IS HEREBY CERTIFIED THAT {{credentialSubject.name}} IS STILL</span><br>
                            <span><font style='color:#2020a7'>REGISTERED IN THIS COUNCIL AND IS LEGALLY ENTITLED TO PRATICE DENTISTRY IN INDIA.</font></span><br>
                            <span><font style='color:#2020a7'>AND</font></span><br>
