--- a/Permenant registration re-issue.html
+++ b/Permenant registration re-issue.html
@@ -52,7 +52,7 @@
             <div class="bg-upsmf"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/mclogoc.jpg" alt="upsmf watermark images"></div>
             <div class="cc-container">
                 <header>
-                    <p class="reg-no"><font style="color:blue">PROVISIONAL REGISTRATION</font> :- {{credentialSubject.registrationNumber}}</p>
+                    <p class="reg-no"><font style="color:blue">PROVISIONAL REGISTRATION</font> :- {{credentialSubject.regNumber}}</p>
 
                    
                     <h3>MEDICAL REGISTRATION CERTIFICATE</h3>
