--- a/NOC-0001.html
+++ b/NOC-0001.html
@@ -116,7 +116,7 @@
                                 </tr>
                                 <tr>
                                     <td>1</td>
-                                    <td><b>{{credentialSubject.registrationNumber}}</b><br>{{credentialSubject.dated}}</td>
+                                    <td><b>{{credentialSubject.regNumber}}</b><br>{{credentialSubject.dated}}</td>
                                     <td><b>{{credentialSubject.name}}</b><br>{{credentialSubject.fathersName}}</td>
                                     <td>{{credentialSubject.qualification}}<br></td>
                                     <td>{{credentialSubject.trainingCenter}}<br></td>
