--- a/GoodStanding-upnc.html
+++ b/GoodStanding-upnc.html
@@ -86,7 +86,7 @@
                             <div class="subject ">
                                 <p class="title">Registration no</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.registrationNumber}} dated {{credentialSubject.dated}}</p>
+                                <p class="result">{{credentialSubject.regNumber}} dated {{credentialSubject.dated}}</p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Training period</p>
