--- a/Foreign-certificate-WC.html
+++ b/Foreign-certificate-WC.html
@@ -86,7 +86,7 @@
                             <div class="subject ">
                                 <p class="title">Registration no</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.registrationNumber}}</p>
+                                <p class="result">{{credentialSubject.regNumber}}</p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Training period</p>
