--- a/COORECTION(permanent).html
+++ b/COORECTION(permanent).html
@@ -51,7 +51,7 @@
             <div class="bg-upsmf"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/mclogoc.jpg" alt="upsmf watermark images"></div>
             <div class="cc-container">
                 <header>
-                    <p class="reg-no"><font style="color:blue">PROVISIONAL REGISTRATION</font> :-{{credentialSubject.provisionalRegistrationNumber}}</p>
+                    <p class="reg-no"><font style="color:blue">PROVISIONAL REGISTRATION</font> :-{{credentialSubject.provisionalregNumber}}</p>
                    
                     <h3>UTTAR PRADESH DENTAL COUNCIL</h3>
                     <h4>OFFICE OF THE MEDICAL COUNCIL, UTTAR PRADESH</h4>
