--- a/BDS_REG_NO.html
+++ b/BDS_REG_NO.html
@@ -148,7 +148,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Fee receipt No.</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.feeReceiptNo}}</p>
+                                        <p class="result">{{credentialSubject.feeReciptNo}}</p>
                                     </div>
                                 </div>
                                 <!-- <div class="row1">
