--- a/CORRECTED_PRO.html
+++ b/CORRECTED_PRO.html
@@ -143,7 +143,7 @@
                                     <div class  ="subject1 ">
                                         <p class="title">Fee</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.feeDetails}}</p>
+                                        <p class="result">{{credentialSubject.feeReciptNo}}</p>
                                     </div>
                                     <div class="subject1 ">
                                         <p class="title">Corrected on</p>
@@ -153,7 +153,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Correction Fee receipt No.</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.feeReceiptNo}}</p>
+                                        <p class="result">{{credentialSubject.feeReciptNo}}</p>
                                     </div>
                                     <p class="small opt-8">U.P. Dental Council has the right to cancel the certificate, if any information is found to be 
                                         incorrect or fake.</p>
