--- a/DH-REG.html
+++ b/DH-REG.html
@@ -117,7 +117,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Fee Recei[t No.</p>
-                                <p class="result">{{credentialSubject.feeReceiptNo}}</p>
+                                <p class="result">{{credentialSubject.feeReciptNo}}</p>
                             </div>
                             <div class="s-division">
                                 <div class="row">  
@@ -144,10 +144,7 @@
                                 <div class="qr">
                                     <img src="{{qrCode}}">
                                 </div>
-                                <div class="barcode">
-                                    <img src="{{{credentialSubject.barCode}}}" alt="bar code">
 
-                                </div>
                             </div>
                             <div class="org-section text-center primary-color">
                                 <span class="d-block">REGISTRAR</span>
