--- a/MDS-REG.html
+++ b/MDS-REG.html
@@ -85,7 +85,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Fee:</p>
-                                <p class="result">{{credentialSubject.feeDetails}}</p>
+                                <p class="result">{{credentialSubject.feeReciptNo}}</p>
                             </div>
 
 
@@ -118,7 +118,7 @@
                                 
                                 <span class="d-block">Registrar</span>
                                 <span class="d-block">U.P. DENTAL COUNCIL</span>
-                                <span class="barcode d-block mt-10"><img src="{{credentialSubject.barCode}}" alt="bar code"></span>
+                                
                             </div>
                         </div>
                     </footer>
