--- a/MSC-r-WC.html
+++ b/MSC-r-WC.html
@@ -81,7 +81,7 @@ She has obtained the following Additional Qualification:</span>
                             <div class="subject name">
                                 <p class="title">University</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.collegeAddress}}</p>
+                                <p class="result">{{credentialSubject.university}}</p>
                             </div>
                             <div class="subject name">
                                 <p class="title">Period</p>
@@ -117,7 +117,7 @@ As per present rules, this certificate is having lifetime validity.</h6>
 
                                 <span class="d-block">U.P. State Medical Faculty</span>
                                 <span class="d-block">Lucknow</span>
-                                <span class="barcode d-block mt-10"><img src="{{{credentialSubject.barCode}}}" alt="bar code"></span>
+                               
                             </div>
                         </div>
                     </footer>
