--- a/PRO.html
+++ b/PRO.html
@@ -141,7 +141,7 @@
                                     </div>
                                     <div class="subject1 ">
                                         <p class="title">Fee Receipt No.</p>
-                                        <p class="result">{{credentialSubject.feeReceiptNo}}</p>
+                                        <p class="result">{{credentialSubject.feeReciptNo}}</p>
                                     </div>
                                     
                                     <p class="small opt-8">U.P. Dental Council has the right to cancel the certificate, if any information is found to be 
