--- a/REISSUE-BDS.html
+++ b/REISSUE-BDS.html
@@ -143,7 +143,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Fee Detail</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.feeDetails}}</p>
+                                        <p class="result">{{credentialSubject.feeReciptNo}}</p>
                                     </div>
                                     <p class="small opt-8">U.P. Dental Council has the right to cancel the certificate, if any information is found to be 
                                         incorrect or fake.</p>
