--- a/degree.html
+++ b/degree.html
@@ -114,7 +114,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Fee Receipt No</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.feeReceiptNo}}</p>
+                                        <p class="result">{{credentialSubject.feeReciptNo}}</p>
                                     </div>                                    
                                 </div>
                                 <div class="row1">
@@ -138,7 +138,6 @@
                                 <span class="d-block">Secretary</span>
                                 <span class="d-block">U.P. State Medical Faculty</span>
                                 <span class="d-block">Lucknow</span>
-                                <span class="barcode d-block mt-10"><img src="{{{credentialSubject.barCode}}}" alt="bar code"></span>
                             </div>
                             
                         </div>
